// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge accept jsx as children 1`] = `
<span
  className="css-17jd12v"
  data-cy="badge"
>
  <span>
    string
  </span>
</span>
`;

exports[`Badge danger 1`] = `
<span
  className="css-1g44s7u"
  data-cy="badge"
>
  danger
</span>
`;

exports[`Badge default 1`] = `
<span
  className="css-17jd12v"
  data-cy="badge"
>
  default
</span>
`;

exports[`Badge outline 1`] = `
<span
  className="css-bvpqwa"
  data-cy="badge"
>
  outline
</span>
`;

exports[`Badge primary 1`] = `
<span
  className="css-11hyrb9"
  data-cy="badge"
>
  primary
</span>
`;

exports[`Badge success 1`] = `
<span
  className="css-y6ql0v"
  data-cy="badge"
>
  success
</span>
`;

exports[`Badge warning 1`] = `
<span
  className="css-1fasnxp"
  data-cy="badge"
>
  warning
</span>
`;
